[package]
name = "watercraft"
description = "A Simple Command Line Minecraft Launcher"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["MedzikUser <medzik@duck.com>"]
homepage = "https://github.com/MedzikUser/watercraft"
repository = "https://github.com/MedzikUser/watercraft.git"
keywords = ["minecraft", "minecraft-launcher"]
edition = "2021"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
# CLi
clap = { version = "4.0.29", features = ["derive"] }
# Http Client
reqwest = { version = "0.11", default-features = false, features = ["json"] }
# Async runtime
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

anyhow = "1.0"
once_cell = "1.16"
byte-unit = "4.0"
zip = "0.6"
dirs = "4.0.0"
